--- a/app/src/main/res/layout/activity_search_movie.xml
+++ b/app/src/main/res/layout/activity_search_movie.xml
@@ -65,7 +65,7 @@
         app:layout_constraintVertical_bias="0.982" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/addMovie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save Movie to Database"
